--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "avalanche-smart-contract-quickstart",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.3.0",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.1",
     "avalanche": "3.8.5",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
     "ethereumjs-tx": "^2.1.2",
-    "ethers": "^5.4.5",
-    "hardhat": "2.6.1",
+    "ethers": "^5.6.1",
+    "hardhat": "^2.9.2",
+    "hardhat-abi-exporter": "^2.8.0",
     "ts-node": "^10.2.1",
+    "typescript": "^4.6.3",
     "web3": "^1.5.2"
   },
   "version": "1.0.0",
@@ -44,9 +46,7 @@
     "balances": "npx hardhat balances",
     "fund-cchain-addresses": "npx hardhat run scripts/fund-cchain-addresses.js"
   },
-  "dependencies": {
-    "typescript": "^4.3.5"
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=14.17.0"
   }
